--- a/django/blog/templates/blog/detail.html
+++ b/django/blog/templates/blog/detail.html
@@ -6,6 +6,6 @@
 
 <h1>{{ post.title }}</h1>
 <p>Published on {{ post.date_posted }}</p>
-<p>{{ post.content }}</p>
+<p>{{ post.content|safe }}</p>
 
 {% endblock %}
