--- a/django/static/css/main.css
+++ b/django/static/css/main.css
@@ -9,13 +9,48 @@ body {
     padding: 20px;
 }
 
-nav {
-    background-color: #333;
+/* Navbar container */
+.navbar {
+    background-color: #201a15;
+    overflow: hidden;
+}
+
+/* Navbar links */
+.navbar a {
+    float: left;
+    display: block;
     color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Right-aligned link (optional) */
+.navbar .right {
+    float: right;
+}
+
+/* Responsive layout - stacks navbar links on smaller screens */
+@media screen and (max-width: 600px) {
+    .navbar a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .navbar .right {
+        float: none;
+    }
 }
 
 footer {
-    background-color: #333;
+    background-color: #201a15;
     color: white;
     text-align: center;
     position: fixed;
