--- a/django/static/css/home.css
+++ b/django/static/css/home.css
@@ -1,8 +1,19 @@
 .hero {
     text-align: center;
     padding: 70px 20px;
-    background-color: #201a15;
-    color: white;
+    border-radius: 0px;
+    background: linear-gradient(135deg, #07393c, #2C666E);
+    color: #F1F7ED;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    background-size: 200% 200%;
+    position: relative;
+    width: 100vw; /* Take up the full width of the viewport including the margin */
+    margin-left: -20px; /* Adjust for the left margin */
+    background-attachment: fixed; /* Parallax effect */
+}
+
+body {
+    background: linear-gradient(135deg, #F1F7ED, #F1F7ED);
 }
 
 /* Main title styling */
@@ -14,7 +25,7 @@
 /* Subheading styling */
 .subheading {
     font-size: 1.5em;
-    color: #aaa;
+    color: #F06543;
 }
 
 /* Main content sections */
@@ -27,7 +38,8 @@
 
 /* Individual content sections */
 .content-section {
-    background-color: white;
+    background: #07393c;
+    color: #F1F7ED;
     padding: 30px;
     margin: 20px 0;
     border-radius: 8px;
@@ -35,6 +47,7 @@
     flex: 1; /* Each child takes up equal space */
     max-width: calc(33.333% - 20px); /* Each child takes up 1/3 of the space minus gap */
     box-sizing: border-box;
+    position: relative;
 }
 
 /* Section titles */
