--- a/django/static/css/home.css
+++ b/django/static/css/home.css
@@ -2,8 +2,8 @@
     text-align: center;
     padding: 70px 20px;
     border-radius: 0px;
-    background: linear-gradient(135deg, #07393c, #2C666E);
-    color: #F1F7ED;
+    background: linear-gradient(135deg, #0a5357, #33767f);
+    color: #F2F8EF;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     background-size: 200% 200%;
     position: relative;
@@ -13,7 +13,7 @@
 }
 
 body {
-    background: linear-gradient(135deg, #F1F7ED, #F1F7ED);
+    background: linear-gradient(135deg, #F2F8EF, #F2F8EF);
 }
 
 /* Main title styling */
@@ -25,7 +25,7 @@ body {
 /* Subheading styling */
 .subheading {
     font-size: 1.5em;
-    color: #F06543;
+    color: #ee7a5d;
 }
 
 /* Main content sections */
@@ -38,8 +38,8 @@ body {
 
 /* Individual content sections */
 .content-section {
-    background: #07393c;
-    color: #F1F7ED;
+    background: #0A5357;
+    color: #F2F8EF;
     padding: 30px;
     margin: 20px 0;
     border-radius: 8px;
