--- a/django/blog/templates/blog/index.html
+++ b/django/blog/templates/blog/index.html
@@ -1,17 +1,20 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Dev Diary{% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+{% endblock %}
+
 {% block content %}
-
     <h1>Dev Diary</h1>
-
     {% if latest_post_list %}
         {% for post in latest_post_list %}
             <div class="post-preview">
-                <h2><a href="{% url 'blog:detail' post.id %}">{{ post.title }}</a></h2>
-                <p>{{ post.content|truncatewords:30|safe }}</p>
-                <p><small>Published on {{ post.date_posted }}</small></p>
+                <div class="post-title"><a href="{% url 'blog:detail' post.id %}">{{ post.title }}</a></div>
+                <div class="post-content">{{ post.content|truncatewords:30|safe }}</div>
+                <div class="post-date"><small>Published on {{ post.date_posted }}</small></div>
                 <hr>
             </div>
         {% endfor %}
