--- a/django/static/css/home.css
+++ b/django/static/css/home.css
@@ -2,8 +2,8 @@
     text-align: center;
     padding: 70px 20px;
     border-radius: 0px;
-    background: linear-gradient(135deg, #0a5357, #33767f);
-    color: #F2F8EF;
+    background: var(--secondary-color);
+    color: var(--text-color);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     background-size: 200% 200%;
     position: relative;
@@ -13,7 +13,7 @@
 }
 
 body {
-    background: linear-gradient(135deg, #F2F8EF, #F2F8EF);
+    background: var(--primary-color);
 }
 
 /* Main title styling */
@@ -25,7 +25,7 @@ body {
 /* Subheading styling */
 .subheading {
     font-size: 1.5em;
-    color: #ee7a5d;
+    color: var(--accent-color);
 }
 
 /* Main content sections */
@@ -38,8 +38,8 @@ body {
 
 /* Individual content sections */
 .content-section {
-    background: #0A5357;
-    color: #F2F8EF;
+    background: var(--secondary-color);
+    color: var(--text-color);
     padding: 30px;
     margin: 20px 0;
     border-radius: 8px;
