--- a/django/blog/templates/blog/detail.html
+++ b/django/blog/templates/blog/detail.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Dev Diary - {{ post.title }}{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+{% endblock %}
 
 {% block content %}
 
 <h1>{{ post.title }}</h1>
-<p>Published on {{ post.date_posted }}</p>
-<p>{{ post.content|safe }}</p>
+<div class="detail-date">Published on {{ post.date_posted }}</div>
+<div class="detail-content">{{ post.content|safe }}</div>
 
 {% endblock %}
